# shelf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  shelf-overview.md
.claude/: settings.local.json
.claude/skills/cleanup-dead-code/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/publish-polish/: SKILL.md
.claude/skills/publish-polish/references/: code-quality.md  repo-checklist.md  report-template.md
.claude/skills/python-pro/: SKILL.md
src/shelf/: __init__.py  __main__.py  cli.py  config.py  models.py  output.py  slugify.py  split.py
src/shelf/convert/: __init__.py  base.py  epub.py  pdf.py
src/shelf/summarize/: __init__.py  base.py  estimate.py  exceptions.py  logging_backend.py  models.py  ollama.py  openai_compat.py  orchestrator.py  prompts.py  splitter.py
tests/: conftest.py  test_cli.py  test_convert.py  test_models.py  test_orchestrator.py  test_output.py  test_slugify.py  test_split.py  test_splitter.py  test_summarize.py
