[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelf"
version = "0.1.0"
description = "Convert PDF/EPUB textbooks into nested, grep-friendly markdown directories"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pymupdf4llm>=0.0.17",
    "markitdown[pdf]>=0.1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
shelf = "shelf.cli:main"

[project.entry-points."shelf.converters"]
pdf = "shelf.convert.pdf:PDFBackend"
epub = "shelf.convert.epub:EPUBBackend"

[tool.setuptools.packages.find]
where = ["src"]
